# ClasificacionObjetosYOLO

./: .gitignore  README.md
Parte1A/: Parte1A_YOLOv11_Segmentacion.ipynb
Parte1A/dataset_traffic/: data.yaml
Parte1A/dataset_traffic/test/labels/: 000000011197.txt  000000017905.txt  000000039484.txt  000000082846.txt  000000100283.txt  000000104198.txt  000000104782.txt  000000142585.txt  000000144706.txt  000000157365.txt  000000169169.txt  000000183246.txt  000000190923.txt  000000198928.txt  000000212573.txt  000000213255.txt  000000225946.txt  000000239843.txt  000000246963.txt  000000269682.txt  000000292997.txt  000000295809.txt  000000301376.txt  000000323751.txt  000000334006.txt  000000335800.txt  000000339870.txt  000000343496.txt  000000361103.txt  000000365745.txt  000000373353.txt  000000431876.txt  000000441586.txt  000000490936.txt  000000492077.txt  000000499181.txt  000000512564.txt  000000571008.txt  000000572555.txt  cone_test_000.txt  (+14 more)
Parte1A/dataset_traffic/train/: labels.cache
Parte1A/dataset_traffic/train/labels/: 000000000724.txt  000000002006.txt  000000008762.txt  000000011122.txt  000000015440.txt  000000026204.txt  000000032941.txt  000000054967.txt  000000057149.txt  000000069138.txt  (+219 more)
Parte1A/dataset_traffic/valid/: labels.cache
Parte1B/: Parte1B_YOLOv12_SuperResolucion.ipynb  grabar_evidencia.py  grabar_video_evidencia.py
Parte1C/: .clangd  CMakeLists.txt  benchmark_cpu.cpp  compile_commands.json  main.cpp
informe/: main.aux  main.out  main.tex  main.toc  main_jordy.aux  main_jordy.out  main_jordy.tex  main_jordy.toc
(+50 files in other folders)
